--- a/app/css/style.css
+++ b/app/css/style.css
@@ -2,10 +2,6 @@
   box-sizing: border-box;
 }
 
-body {
-  background-color: #f1f1f1;
-}
-
 #form {
   margin: 100px auto;
   font-family: roboto;
@@ -61,3 +57,28 @@ body {
 	margin:10px;
 	
 }
+#signform .sform{
+  width: 600px;
+  display: block;
+  margin: auto;
+  border: 1px solid red;
+  padding: 50px 50px;
+}
+
+#signform button{
+  display: block;
+  margin: auto;
+  margin-top: 50px;
+  background-color: rgba(0,0,0,0.09);
+  border: 1px solid red;
+}
+#signform .sform h2{
+text-align: center;
+font-size: 18px;
+font-weight: 600;
+}
+
+.sform input{
+  width: 100%;
+}
+
